# mzDuck

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
design/: 20260416design.claude.md  20260416design.codex.md  20260417-development-notes.md  design.md
design/develop-notes/: 20260417-1915-mgf-split-gzip-parquet.md  20260417-2035-readme-public-cleanup.md  20260420-1456-usage-benchmark-sync.md  20260420-1523-mzml-mgf-parquet.md  20260420-1605-mgf-parquet-export-title-source.md  20260421-1130-pynumpress-optional-docs.md  20260421-1137-mzml-mgf-help-export-example.md  20260421-1143-key-changes-single-file.md  20260421-1157-skip-invalid-precursor-charge.md  20260421-1208-key-change-log-correction.md  20260427-1906-example-data-under-examples.md  20260427-1912-switch-example-data-to-small.md
design/key-changes/: 20260417-1915-mgf-split-gzip-parquet.md  20260417-2035-readme-public-cleanup.md  20260420-1456-usage-benchmark-sync.md  20260420-1523-mzml-mgf-parquet.md  20260420-1605-mgf-parquet-export-title-source.md  20260421-1130-pynumpress-optional-docs.md  key-changes.md
docs/: usage.md
examples/: README.md  convert_example.py  make_example_data.py  query_example.py
examples/data/: small.mgf  small.mgf.parquet  small.mzML  small.mzduck  small.mzduck.mgf
mzduck/: __init__.py  __main__.py  cli.py  examples.py  export_mgf.py  export_mzml.py  file.py  import_mzml.py  metadata.py  reconstruction.py  schema.py
mzduck/example_data/: README.md  tiny.mgf  tiny.mzML  tiny.mzMLb  tiny.mzduck
tests/: conftest.py  test_cli.py  test_example_data.py  test_exports.py  test_import_and_query.py  test_mzmlb_import.py  test_parquet.py
